<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header_statistic"
                android:text="@string/header_statistic"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="24sp"
                android:textStyle="normal|bold"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:text="@string/touchCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextView"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtView_touchCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/table_default"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:text="@string/lastTouch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtView_lastTouch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/table_default"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:text="@string/avgPerMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtView_avgPerMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/table_default"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:textSize="18sp" />
                </TableRow>

            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header_LastTouches"
                android:text="@string/header_LastTouches"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:textStyle="normal|bold"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:text="@string/table_default_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView11"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/table_default"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:text="@string/table_default_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView13"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/table_default"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:text="@string/table_default_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView15"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/table_default"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:text="@string/table_default_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView17"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/table_default"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:text="@string/table_default_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView19"
                        android:layout_weight="1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/table_default"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header_Touches"
                android:text="@string/header_allTouches"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:textStyle="normal|bold"/>
            <TextView
                android:id="@+id/txtView_allTouches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:text="@string/header_allTouches" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_reset"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_reset"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


